concord_macros/tests/dsl/fail/fail_body_paginate.stderr
error: paginated endpoints with request bodies are not supported in v1
  --> tests/dsl/fail/fail_body_paginate.rs:14:10
   |
14 |     POST Create(limit: u64 = 20, body: Json<CreateBody>)
   |          ^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_body_paginate.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
